Added speed ratio for weapon templates and all equipment service tests are green